--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,5 @@
     <string name="price_pizza_3">£8.50</string>
     <string name="price_pizza_4">£9.00</string>
 
-    <string name="filler_dots">...............</string>
+    <string name="filler_dots">.............</string>
 </resources>
